<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        android:src="@drawable/moon" />

    <TextView
        android:id="@+id/profile_desc"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/name_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <TextView
        android:id="@+id/profile_name"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/profile_desc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/track_desc"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/track_desc"
        app:layout_constraintStart_toStartOf="@+id/profile_desc"
        app:layout_constraintTop_toBottomOf="@+id/profile_desc" />

    <TextView
        android:id="@+id/profile_track"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track"
        app:layout_constraintBaseline_toBaselineOf="@+id/track_desc"
        app:layout_constraintEnd_toEndOf="@+id/profile_name" />

    <TextView
        android:id="@+id/country_desc"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/country_desc"
        app:layout_constraintStart_toStartOf="@+id/track_desc"
        app:layout_constraintTop_toBottomOf="@+id/track_desc" />

    <TextView
        android:id="@+id/profile_country"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBaseline_toBaselineOf="@+id/country_desc"
        app:layout_constraintEnd_toEndOf="@+id/profile_track" />

    <TextView
        android:id="@+id/email_desc"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_desc"
        app:layout_constraintStart_toStartOf="@+id/country_desc"
        app:layout_constraintTop_toBottomOf="@+id/country_desc" />

    <TextView
        android:id="@+id/profile_email"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_desc"
        app:layout_constraintEnd_toEndOf="@+id/profile_country" />

    <TextView
        android:id="@+id/phone_number_desc"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number_desc"
        app:layout_constraintStart_toStartOf="@+id/email_desc"
        app:layout_constraintTop_toBottomOf="@+id/email_desc" />

    <TextView
        android:id="@+id/profile_mobile_number"
        style="@style/FontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_number_desc"
        app:layout_constraintEnd_toEndOf="@+id/profile_email" />

</androidx.constraintlayout.widget.ConstraintLayout>